# http-server-c

./: .gitignore  CMakeLists.txt  README.md
docs/: motivation.md
include/: compression.h  dispatcher.h  handlers.h  header.h  headers.h  protocol.h  request.h  response.h  server.h  status.h  util.h
include/handlers/: echo.h  files.h  home.h  not_found.h  user_agent.h
src/: compression.c  dispatcher.c  handlers.c  header.c  headers.c  main.c  request.c  response.c  server.c  status.c  util.c
src/handlers/: echo.c  files.c  home.c  not_found.c  user_agent.c
